--- a/c-call-rust/Cargo.toml
+++ b/c-call-rust/Cargo.toml
@@ -3,7 +3,8 @@ name = "c-call-rust"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+[build-dependencies]
+cbindgen.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
