--- a/rust-call-c/Cargo.toml
+++ b/rust-call-c/Cargo.toml
@@ -2,3 +2,9 @@
 name = "rust-call-c"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[build-dependencies]
+bindgen.workspace = true
+cc.workspace = true
